syntax = "proto3";

package analytics;

option java_multiple_files = true;
option java_package = "jku.multimediasysteme.grpc.analytics";

message SmartSessionPromptRequest {
    string userId = 1;
    string model = 2;
    string prompt = 3;
    float temperature = 4;
    repeated string smartSessionIds = 5;
}

message SmartSessionPromptResponse {
    string chunk = 1;
}

service Analytics {
    rpc handleSmartSessionPrompt (SmartSessionPromptRequest) returns (stream SmartSessionPromptResponse);
}
